--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </button>
                   </p>
                   <div class="collapse" id="collapseExample">  <!--BU KISIMDA GİZLENEN O KART KISMINI YÖNETİYORUZ-->
-                    <div class="card card-body">
+                    <div class="mcard card-body">
                         <div class="details">
                             <div class="col">
                                 <img src="images/humidity.png" > <!-- Nem ikonunu gösteren resim -->
